Update and rename 1.json to trapped_chest.json

--- a/数据包文件/data/jasonxue/recipes/trapped_chest.json
+++ b/数据包文件/data/jasonxue/recipes/trapped_chest.json
@@ -1,9 +1,9 @@
 {
     "type": "smelting",
     "ingredient": {
-        "item": "minecraft:chest"
+        "item": "minecraft:trapped_chest"
     },
-    "result": "minecraft:chest",
+    "result": "minecraft:trapped_chest",
     "experience": 0,
     "cookingtime": 200
 }
